--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -20,7 +20,7 @@
     <div class="nav-wrapper">
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <a href="/DIYWEB/" class="brand-logo">DIYWeb</a>
-        <ul class="right">
+        <ul class="right hide-on-med-and-down">
             <li><a href="/DIYWEB/favorites">favorites</a></li>
             <li><a href="/DIYWEB/category">categories</a></li>
             <li sec:authentication="name"></li>
