--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,7 @@
     <nav th:replace="layout :: categoryLeftPane"></nav>
     <div class="col s12 m8 l9 white" >
         <h2>DIY Topics</h2>
+        <div th:replace="layout :: flash"></div>
         <ul class="collection">
             <div th:each="diy : ${DIYs}" th:class="diy" >
                 <li class="collection-item"><a th:href="@{'/DIY-details/'+${diy.title}}" th:text="${#strings.replace(diy.title, '-', ' ')}"></a>
