Add DIY Restful API and hal browser.

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -23,6 +23,7 @@
         <ul class="right hide-on-med-and-down">
             <li><a href="/DIYWEB/favorites">favorites</a></li>
             <li><a href="/DIYWEB/category">categories</a></li>
+            <li><a href="/DIYWEB/api/">DIYWEB API</a></li>
             <li sec:authentication="name"></li>
             <li>
                 <form th:action="@{/logout}" method="post" class="logout">
@@ -35,6 +36,7 @@
                 <ul class="collapsible collapsible-accordion">
                     <li><a href="/DIYWEB/favorites">favorites</a></li>
                     <li><a href="/DIYWEB/category">categories</a></li>
+                    <li><a href="/DIYWEB/api/">DIYWEB API</a></li>
                     <li sec:authentication="name"></li>
                     <li>
                         <form th:action="@{/logout}" method="post" class="logout">
